fix(sql): native Select must honour its own timeout() and round-trip its JSON (#6815, #6816, #6817) (#6872)